--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 name: Push Container to Heroku
 
-on: 
+on:
   push:
     branches:
-      - Deploy
+      - Main 
 
 jobs:
   build:
@@ -11,14 +11,14 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Login to Heroku Container registry
-      env: 
+      env:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-      run: heroku container:login 
+      run: heroku container:login
     - name: Build and push
       env:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-      run: heroku container:push -a animehunt-aa web 
+      run: heroku container:push -a animehunt-aa web
     - name: Release
       env:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-      run: heroku container:release -a animehunt-aa web 
+      run: heroku container:release -a animehunt-aa web
